# talos

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  analyze_nonsports.py  analyze_nonsports_deep.py  analyze_nonsports_post_sb.py  analyze_nonsports_v2.py  build.bat  pyproject.toml  soak.py  talos.bat  talos.spec  talos_bps_migration.bat  talos_exe.bat
.brainstorm-codex-loop/: transcript.md
.claude/: settings.local.json
brain/: architecture.md  changelog.md  decisions.md  expected-expiration-research.md  index.md  patterns.md  principles.md
docs/: KALSHI_CPM_AND_ETA.md  KALSHI_POSITION_AND_PNL.md  KALSHI_QUEUE_POSITION.md
scripts/: check_queue.py  check_trades.py  drift_report.py  migrate_talos_ids.py
tests/: conftest.py  test_analyze_stale_recovery.py  test_auth.py  test_auto_accept.py  test_auto_accept_duration.py  test_auto_accept_log.py  test_automation_config.py  test_bid_adjuster.py  test_cancel_discipline.py  test_check_exit_only_cascade.py  test_config.py  test_confirmation_sources.py  test_cpm.py  test_data_collector.py  test_data_staleness.py  test_discovery_bootstrap.py  test_discovery_events.py  test_discovery_milestone_loop.py  test_drip_app.py  test_drip_controller.py  test_drip_modal.py  test_drip_runtime_state.py  test_drip_side_state.py  test_drip_ws_runtime.py  test_engine.py  test_engine_add_pairs_from_selection.py  test_engine_ready_for_trading.py  test_engine_remove_pairs_from_selection.py  test_engine_restore_with_state.py  test_engine_startup_gate.py  test_errors.py  test_exit_only.py  test_fees.py  test_fees_bps.py  (+74 more)
(+203 files in other folders)
