[project]
name = "talos"
version = "0.1.0"
description = "Kalshi arbitrage trading system - manual control with progressive automation"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "websockets>=13",
    "textual>=1.0",
    "pydantic>=2.0",
    "structlog>=24.0",
    "rich>=13.0",
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "pyright>=1.1",
]

[project.scripts]
talos = "talos.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/talos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
cache_dir = ".pytest_cache_local"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"